syntax = "proto3";

package trueauth;

option go_package = "github.com/sirjager/trueauth/rpc";

message SignoutRequest {
    // session are optional if you want to target
    string session = 1;
    bool all = 2;
}

message SignoutResponse {
    string message = 1;
}
